# Copyright 2021 HetuDB.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

[workspace]
members = [
    # Client
    "client/rust/client",

    # Common
    "common/meta",
    "common/error",
    "common/prost",
    "common/prost/helpers",

    # Core
    "core/core",
    "core/cloudsrv",
    "core/catalog",
    "core/query",

    # Extension
    "extension/cdc",
    "extension/streaming",

    # Lib
    "lib/cstore",
    "lib/lstore",
    "lib/mywire",

    # Plugin: multi data source connector
    "plugin/tpch",
    "plugin/tpcds",

    # Service
    "service/proxy",

    # Storage
    "storage/datanode",

    # Main
    "main/hetu-start",
    "main/cloudsrv-start",

    # Examples
    "examples",

    # Testing: tpch tpcds sysbench etc.
    "testing/benchmarks",
]
exclude = ["client/rust/cli"]

# cargo build --profile release-lto
[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = true

