# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "hetu-examples"
description = "Hetu usage examples"
version = "0.1.0"
homepage = "https://www.hetudb.com"
repository = "https://github.com/hetudb/hetu"
authors = ["HetuDB <dev@hetudb.com>"]
license = "Apache-2.0"
keywords = [ "arrow", "distributed", "query", "sql" ]
edition = "2021"
publish = false
rust-version = "1.59"

[[example]]
name = "standalone_sql"
path = "examples/standalone-sql.rs"
required-features = ["hetu-client/standalone"]

[dependencies]
# Workspace dependencies
hetu-client = { path = "../client/rust/client", version = "0.1.0" }

# Github dependencies
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }

# Crates.io dependencies
futures = "0.3"
num_cpus = "1.13.0"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
tonic = "0.7"
