[package]
name = "common-proto"
authors = ["Hetudb Authors <opensource@hetudb.com>"]
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
prost = "0.9.0"

[build-dependencies]
prost-build = "0.9"
