[package]
name = "photon-proto"
authors = ["Hetudb Authors <opensource@hetudb.com>"]
version = "0.1.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schema-proto = { package = "schema-proto", path = "../schema-proto" }

# Crates.io dependencies
prost = "0.9.0"
prost-types = "0.9"
tonic = { version = "0.6.2", features = ["transport", "codegen", "prost", "tls-roots", "tls"] }

[build-dependencies]
tonic-build = "0.6.2"

[dev-dependencies]
anyhow = "1.0.52"