# Copyright 2021 HetuDB.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

[package]
name = "hetu-pb"
description = "Hetu Protobuf Lib - Hetu metadata pb"
license = "Apache-2.0"
version = "0.1.0"
homepage = "https://www.hetudb.com"
repository = "https://github.com/hetudb/hetu"
authors = ["HetuDB <dev@hetudb.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
pbjson = "0.3"
prost = "0.10"
prost-helpers = { path = "helpers" }
prost-types = "0.10"
serde = { version = "1", features = ["derive"] }
tonic = { version = "=0.2.0-alpha.3", package = "madsim-tonic" }

[build-dependencies]
pbjson-build = "0.3"
tonic-build = { version = "=0.2.0-alpha.1", package = "madsim-tonic-build" }