[package]
name = "hetu-cloudsrv"
description = "Hetu Cloud Service - Query Planning & Scheduler"
license = "Apache-2.0"
version = "0.1.0"
homepage = "https://www.hetudb.com"
repository = "https://github.com/hetudb/hetu"
authors = ["HetuDB <dev@hetudb.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[[bin]]
name = "hetu-cloud-service"
path = "src/cloud_service.rs"

[features]
default = ["etcd", "sled"]
etcd = ["etcd-client"]
sled = ["sled_package", "tokio-stream"]

[dependencies]
# Workspace dependencies
metabase-proto = { package = "metabase-proto", path = "../../common/metabase-proto" }
hetu-core = { path = "../core", version = "0.1.0"}
hetu-error = { path = "../../common/error", version = "0.1.0"}

# Github dependencies
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }

# Crates.io dependencies
anyhow = "1"
async-recursion = "1.0.0"
async-trait = "0.1.41"
clap = { version = "3", features = ["derive", "cargo"] }
env_logger = "0.9"
etcd-client = { version = "0.9", optional = true }
futures = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14.4"
log = "0.4"
parking_lot = "0.12"
parse_arg = "0.1.3"
prost = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sled_package = { package = "sled", version = "0.34", optional = true }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
tonic = "0.7"
tower = { version = "0.4" }
warp = "0.3"
serfig = "0.0.2"

[dev-dependencies]
hetu-core = { path = "../core", version = "0.1.0" }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.7" }
