# Copyright 2021 HetuDB.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

[package]
name = "hetu-cloudsrv"
description = "Hetu Cloud Service - Query Planning & Scheduler"
license = "Apache-2.0"
version = "0.1.0"
homepage = "https://www.hetudb.com"
repository = "https://github.com/hetudb/hetu"
authors = ["HetuDB <dev@hetudb.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false
test = false

[[bin]]
name = "hetu-cloud-service"
path = "src/cloud_service.rs"

[features]
default = ["etcd", "sled"]
etcd = ["etcd-client"]
sled = ["sled_package", "tokio-stream"]

[dependencies]
anyhow = "1"
async-recursion = "1.0.0"
async-trait = "0.1.41"
clap = { version = "3", features = ["derive", "cargo"] }
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }
env_logger = "0.9"
etcd-client = { version = "0.9", optional = true }
futures = "0.3"
hetu-core = { path = "../core", version = "0.1.0" }
hetu-error = { path = "../../common/error", version = "0.1.0" }
http = "0.2"
http-body = "0.4"
hyper = "0.14.4"
log = "0.4"
metabase-proto = { package = "metabase-proto", path = "../../common/metabase-proto" }
parking_lot = "0.12"
parse_arg = "0.1.3"
prost = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serfig = "0.0.2"
sled_package = { package = "sled", version = "0.34", optional = true }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
tonic = "0.7"
tower = { version = "0.4" }
warp = "0.3"

[dev-dependencies]
hetu-core = { path = "../core", version = "0.1.0" }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.7" }
