# Copyright 2021 HetuDB.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

[package]
name = "hetu-query"
description = "Hetu Distributed Compute - Executor"
license = "Apache-2.0"
version = "0.1.0"
homepage = "https://www.hetudb.com"
repository = "https://github.com/hetudb/hetu"
authors = ["HetuDB <dev@hetudb.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
snmalloc = ["snmalloc-rs"]

[dependencies]
anyhow = "1"
arrow = { version = "15.0.0" }
arrow-flight = { version = "15.0.0" }
async-trait = "0.1.41"
chrono = { version = "0.4", default-features = false }
clap = { version = "3.1.18", features = ["derive"] }
ctrlc = "3.2.2"
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }
env_logger = "0.9"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
hetu-core = { path = "../core", version = "0.1.0" }
hetu-error = { path = "../../common/error", version = "0.1.0" }
hetu-mywire = { path = "../../lib/mywire", version = "0.1.0" }
hyper = "0.14.4"
log = "0.4"
mysql_common = { version = "0.28.0", features = ["chrono"] }
parking_lot = "0.12"
serde = { version = "1.0.137", features = ["derive"] }
serfig = "0.0.2"
snmalloc-rs = { version = "0.3", optional = true }
sqlparser = "0.17"
tempfile = "3"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.7"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
mysql = "22.0.0"
mysql_async = "0.29.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]

# use libc on unix like platforms to set worker priority in DedicatedExecutor
[target."cfg(unix)".dependencies.libc]
version = "0.2"
