# Copyright 2021 HetuDB.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

[package]
name = "hetu-cli"
description = "Command Line Client for hetu distributed database."
version = "0.1.0"
keywords = [ "hetu", "cli", "hetu-cli",]
license = "Apache-2.0"
homepage = "https://www.hetudb.com"
repository = "https://github.com/hetudb/hetu"
authors = ["HetuDB <dev@hetudb.com>"]
edition = "2021"
rust-version = "1.59"
readme = "README.md"

[dependencies]
# Workspace dependencies
hetu-client = { path = "../client", version = "0.1.0"}

# Github dependencies
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }
datafusion-cli = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }

# Crates.io dependencies
clap = { version = "3", features = ["derive", "cargo"] }
dirs = "4.0.0"
env_logger = "0.9"
mimalloc = { version = "0.1", default-features = false }
rustyline = "9.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
