# Copyright 2021 HetuDB.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

[package]
name = "hetu-client"
description = "Hetu Distributed Compute"
license = "Apache-2.0"
version = "0.1.0"
homepage = "https://www.hetudb.com"
repository = "https://github.com/hetudb/hetu"
authors = ["HetuDB <dev@hetudb.com>"]
edition = "2021"
rust-version = "1.59"

[dependencies]
datafusion = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }
datafusion-proto = { git = "https://github.com/apache/arrow-datafusion", rev = "3c1c188e1476575f113a511789e398fdd5c009cd" }
futures = "0.3"
hetu-cloudsrv = { path = "../../../core/cloudsrv", version = "0.1.0", optional = true }
hetu-core = { path = "../../../core/core", version = "0.1.0" }
hetu-query = { path = "../../../core/query", version = "0.1.0", optional = true }
log = "0.4"
parking_lot = "0.12"
sqlparser = "0.17"
tempfile = "3"
tokio = "1.0"

[features]
default = []
standalone = ["hetu-cloudsrv", "hetu-query"]
